Renamed license file, added apache commons notices